--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGrid": {
+    "Key":  "API KEY";
+  }  
 }
